tests/ui/traits/vtable/plain-self.stderr
error: vtable entries for `<u32 as RefNum<u32>>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
       ]
  --> $DIR/plain-self.rs:23:1
   |
LL | pub trait RefNum<Base>: NumOps<Base, Base> + for<'r> NumOps<&'r Base, Base> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: vtable entries for `<() as Simple>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
       ]
  --> $DIR/plain-self.rs:11:1
   |
LL | pub trait Simple {
   | ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

